# Wolf3d

./: CMakeLists.txt  README.md  w3d.c  w3d_draw.c  w3d_events.c  w3d_game.c  wolf_contoll.c  wolf_gifs.c  wolf_intro.c  wolf_menu.c  wolf_other.c  wolf_parsefile.c
includes/: w3d.h
libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_countword.c  ft_isaldigit.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhite.c  ft_itoa.c  ft_lineln.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+27 more)
libft/ft_printf/: for_specif.c  ft_printf.c  ft_printf.h  itoa_base.c  lft_func.c  parse_core.c  small_shit.c  to_write.c  woodman.c
maps/: map  map1  map1~  map2  map~
music/: pause.sh
pictures/: -42.xpm  chizh.xpm  control.xpm  crosshair.xpm  knuckles.xpm  lol.xpm  menuoff.xpm  menuon.xpm  setings.xpm  shrek.xpm
pictures/gifs/: README.md
pictures/gifs/gif1/: 0  1  2  3  4  5  6  7  8  9
pictures/gifs/gif2/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  (+28 more)
pictures/intro/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  (+5 more)
pictures/walls/: 0  3  4  5  6  7  8  README.md
(+53 files in other folders)
